Fix PHPCS on generated test files + on Entity.

--- a/Skeleton/Api/Tests/Application/Command/Handler/NewCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/NewCommandHandlerTest.php.twig
@@ -69,6 +69,6 @@ class NewCommandHandlerTest extends \PHPUnit_Framework_TestCase
         //This line force to run an exception.
         $this->workflowHandler->data->entity = [];
 
-        $result = $this->commandHandler->process($this->command);
+        $this->commandHandler->process($this->command);
     }
 }
