--- a/Skeleton/Api/Tests/Application/Command/Handler/UpdateCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/UpdateCommandHandlerTest.php.twig
@@ -67,6 +67,6 @@ class UpdateCommandHandlerTest extends \PHPUnit_Framework_TestCase
         //This line force to run an exception.
         $this->workflowHandler->data->entity = [];
 
-        $result = $this->commandHandler->process($this->command);
+        $this->commandHandler->process($this->command);
     }
 }
